basic auth created

--- a/package.json
+++ b/package.json
@@ -24,17 +24,27 @@
   "dependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/koa": "^2.13.1",
+    "@types/koa-ejs": "^4.2.2",
+    "@types/koa-passport": "^4.0.2",
     "@types/koa-router": "^7.4.1",
+    "@types/koa-session": "^5.10.3",
     "@types/node": "^14.14.34",
     "@types/sequelize": "^4.28.9",
+    "bcrypt": "^5.0.1",
     "dayjs": "^1.10.4",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "koa": "^2.13.1",
+    "koa-better-flash": "0.0.4",
     "koa-body": "^4.2.0",
+    "koa-ejs": "^4.3.0",
+    "koa-flash": "^1.0.0",
     "koa-helmet": "^6.1.0",
     "koa-json": "^2.0.2",
+    "koa-passport": "^4.1.4",
     "koa-router": "^10.0.0",
+    "koa-session": "^6.1.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "sequelize": "^6.5.1",
     "steamapi": "^2.1.2",
