--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@types/koa-session": "^5.10.3",
     "@types/node": "^14.14.34",
     "@types/sequelize": "^4.28.9",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "dayjs": "^1.10.4",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
+    "get-steam-inventory": "^2.0.0",
     "koa": "^2.13.1",
     "koa-better-flash": "0.0.4",
     "koa-body": "^4.2.0",
@@ -48,6 +50,8 @@
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "sequelize": "^6.5.1",
+    "steam-inventory-stream": "^1.0.7",
+    "steam-user-inventory": "^4.2.0",
     "steamapi": "^2.1.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
