--- a/package.json
+++ b/package.json
@@ -37,12 +37,10 @@
     "dayjs": "^1.10.4",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
-    "get-steam-inventory": "^2.0.0",
     "koa": "^2.13.1",
     "koa-better-flash": "0.0.4",
     "koa-body": "^4.2.0",
     "koa-ejs": "^4.3.0",
-    "koa-flash": "^1.0.0",
     "koa-helmet": "^6.1.0",
     "koa-json": "^2.0.2",
     "koa-passport": "^4.1.4",
@@ -52,15 +50,13 @@
     "passport-local": "^1.0.0",
     "passport-steam": "^1.0.15",
     "pg": "^8.5.1",
-    "sentencer": "^0.2.1",
     "sequelize": "^6.5.1",
-    "steam-inventory-stream": "^1.0.7",
-    "steam-user-inventory": "^4.2.0",
     "steamapi": "^2.1.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sentencer": "^0.2.1"
   }
 }
